Fixed horizontal scrolling

--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,9 @@
 * {
     font-family: "Inter", sans-serif;
 }
+
+html,
+body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
